--- a/Meditrack/frontend/package.json
+++ b/Meditrack/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -17,6 +18,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+        "vite": "^4.0.0",
+
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
     "framer-motion": "^11.2.12",
