--- a/Meditrack/frontend/package.json
+++ b/Meditrack/frontend/package.json
@@ -18,18 +18,19 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-        "vite": "^4.0.0",
-
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.554.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vite": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
