--- a/Meditrack/frontend/package.json
+++ b/Meditrack/frontend/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "18"
+    "node": "20.x"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
