--- a/Meditrack/frontend/package.json
+++ b/Meditrack/frontend/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
- 
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.9",
@@ -19,6 +18,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "framer-motion": "^11.18.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
